deployment-artifactory.yaml
# Create service with:
# microk8s.kubectl create service clusterip artifactory --tcp=80:80 --tcp=22:22

kind: Deployment
apiVersion: apps/v1
metadata:
  name: artifactory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: artifactory
  template:
    metadata:
      labels:
        app: artifactory
    spec:
      containers:
      - name: artifactory
        image: nginx:stable-alpine
        ports:
        - containerPort: 80
          protocol: TCP
        - containerPort: 22
          protocol: TCP
        volumeMounts:
          # - name: artifactory-nginx-volume
          #   mountPath: "/usr/share/nginx/html"
          - name: artifactory-storage
            mountPath: "/usr/share/nginx/html"
          - name: artifactory-nginx-conf
            mountPath: "/etc/nginx/nginx.conf"
          # - name: ssh-volume
          #   mountPath: "/root/.ssh"
      volumes:
      # - name: artifactory-nginx-volume
      #   hostPath:
      #     path: /mnt/artifactory
      #     type: Directory
      - name: artifactory-storage
        persistentVolumeClaim:
          claimName: pvc-artifactory-storage
      - name: artifactory-nginx-conf
        hostPath:
          path: /home/ehynes/k8sConfig/nginx.artifactory.conf
          type: File
      # - name: ssh-volume
      #   secret:
      #     secretName: ssh-artifactory
