deployment-nginx.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/var/jenkins_home"
          name: storage
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: pvc-jenkins
