deployment-postgres.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        ports:
        - containerPort: 5432
          protocol: TCP
        volumeMounts:
        - name: postgres-data
          mountPath: "/var/lib/postgresql/data/pgdata"
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: pvc-postgres
