deployment-sonarqube.yaml
# check postgres working OK:
# psql -h postgres.default.svc.cluster.local -d sonar -U sonar

kind: Deployment
apiVersion: apps/v1
metadata:
  name: sonarqube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      containers:
      - name: sonarqube
        image: sonarqube:lts
        ports:
        - containerPort: 9000
          protocol: TCP
        volumeMounts:
        - name: sonar-data
          mountPath: "/opt/sonarqube/data/"
        - name: sonar-extensions
          mountPath: "/opt/sonarqube/extensions/"
      volumes:
      - name: sonar-data
        persistentVolumeClaim:
          claimName: pvc-sonarqube-data
      - name: sonar-extensions
        persistentVolumeClaim:
          claimName: pvc-sonarqube-extensions
