ingress-auth.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-fanout-auth
  annotations:
    # basic auth:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: htsecret
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"

    nginx.ingress.kubernetes.io/rewrite-target: /

    # rate limiting
    nginx.ingress.kubernetes.io/limit-connections: "100"
    nginx.ingress.kubernetes.io/limit-rpm: "100"
    nginx.ingress.kubernetes.io/limit-rps: "5"
spec:
  rules:

  #rexsystems (0000)
  - host: dev.web.0000.rexsystems.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: rexsystems-web-dev
          servicePort: 3000
      - path: /api
        backend:
          serviceName: rexsystems-api-dev
          servicePort: 8090
  - host: dev.api.0000.rexsystems.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: rexsystems-api-dev
          servicePort: 8090


  #rexapp (0001)
  - host: dev.web.0001.rexsystems.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: rexapp-web-dev
          servicePort: 3000
      - path: /api
        backend:
          serviceName: rexapp-api-dev
          servicePort: 8090
  - host: dev.api.0001.rexsystems.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: rexapp-api-dev
          servicePort: 8090

  #ideahopper (0002)
  - host: dev.web.0002.rexsystems.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: ideahopper-web-dev
          servicePort: 3000
      - path: /api
        backend:
          serviceName: ideahopper-api-dev
          servicePort: 8090
  - host: dev.api.0002.rexsystems.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: ideahopper-api-dev
          servicePort: 8090
  - host: uat.web.0002.rexsystems.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: ideahopper-web-uat
          servicePort: 3000
      - path: /api
        backend:
          serviceName: ideahopper-api-uat
          servicePort: 8090
  - host: uat.api.0002.rexsystems.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: ideahopper-api-uat
          servicePort: 8090
  - host: staging.web.0002.rexsystems.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: ideahopper-web-staging
          servicePort: 3000
      - path: /api
        backend:
          serviceName: ideahopper-api-staging
          servicePort: 8090
  - host: staging.api.0002.rexsystems.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: ideahopper-api-staging
          servicePort: 8090


  #jenkins
  - host: jenkins.rexsystems.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080

  #sonarqube
  - host: sonarqube.rexsystems.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: sonarqube
          servicePort: 9000

  #artifactory
  - host: artifactory.rexsystems.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: artifactory
          servicePort: 80

  #kibana
  - host: kibana.rexsystems.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 5601

  tls:
  - secretName: tls-secret-dev-web-0000-rexsystems-co-uk
  - secretName: tls-secret-dev-api-0000-rexsystems-co-uk
  - secretName: tls-secret-dev-web-0001-rexsystems-co-uk
  - secretName: tls-secret-dev-api-0001-rexsystems-co-uk
  - secretName: tls-secret-dev-web-0002-rexsystems-co-uk
  - secretName: tls-secret-dev-api-0002-rexsystems-co-uk
  - secretName: tls-secret-uat-web-0002-rexsystems-co-uk
  - secretName: tls-secret-uat-api-0002-rexsystems-co-uk
  - secretName: tls-secret-staging-web-0002-rexsystems-co-uk
  - secretName: tls-secret-staging-api-0002-rexsystems-co-uk
  - secretName: tls-secret-jenkins-rexsystems-co-uk
  - secretName: tls-secret-sonarqube-rexsystems-co-uk
  - secretName: tls-secret-artifactory-rexsystems-co-uk
  - secretName: tls-secret-kibana-rexsystems-co-uk
