ingress-noauth.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-fanout-noauth
  annotations:
    # remove www prefix
    nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/configuration-snippet: |
    #  if ( $host ~ ^www\.(.+)$ ) {
    #    set $without_www $1;
    #    rewrite ^ $scheme://$without_www$uri 302;
    #  }
spec:
  rules:
  - host: rexsystems.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: rexsystems-web-production
          servicePort: 80
      - path: /api
        backend:
          serviceName: rexsystems-api-production
          servicePort: 80

  - host: www.rexsystems.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: rexsystems-web-production
          servicePort: 80
      - path: /api
        backend:
          serviceName: rexsystems-api-production
          servicePort: 80
  
  - host: rexapp.rexsystems.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: rexapp-web-production
          servicePort: 80
      - path: /api
        backend:
          serviceName: rexapp-api-production
          servicePort: 80

  - host: ideahopper.org
    http:
      paths:
      - path: /
        backend:
          serviceName: ideahopper-web-production
          servicePort: 80
      - path: /api
        backend:
          serviceName: ideahopper-api-production
          servicePort: 80
  tls:
    - secretName: tls-secret-rexsystems-co-uk
    - secretName: tls-secret-www-rexsystems-co-uk
    - secretName: tls-secret-rexapp-rexsystems-co-uk
    - secretName: tls-secret-ideahopper-org
